--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,238 @@
-.App {
+* {
+  box-sizing: border-box;
+  transition: 0.35s ease;
+}
+
+.backToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ed141e;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.backToTop:hover {
+  background-color: #555;
+}
+.rela-block {
+  display: block;
+  position: relative;
+  margin: auto;
+}
+.rela-inline {
+  display: inline-block;
+  position: relative;
+  margin: auto;
+}
+.floated {
+  display: inline-block;
+  position: relative;
+  float: left;
+}
+.abs-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 88%;
+}
+.caps {
+  text-transform: uppercase;
+}
+.justified {
+  text-align: justify;
+}
+p.light {
+  color: #777;
+}
+h2 {
+  font-family: "Open Sans";
+  font-size: 30px;
+  letter-spacing: 5px;
+  font-weight: 600;
+  line-height: 40px;
+  color: #000;
+}
+h3 {
+  font-family: "Open Sans";
+  font-size: 21px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  line-height: 28px;
+  color: #000;
+}
+.page {
+  width: 90%;
+  height: 85%;
+  max-width: 1200px;
+  margin: 50px auto;
+  background-color: #fff;
+  box-shadow: 6px 10px 28px 0px rgba(0, 0, 0, 0.4);
+}
+.top-bar {
+  height: 220px;
+  background-color: #848484;
+  color: #fff;
+}
+.name {
+  display: false;
+  position: absolute;
+  margin: false;
+  top: false;
+  left: calc(350px + 5%);
+  right: 0;
+  bottom: 0;
+  height: 120px;
+  text-align: center;
+  font-family: "Raleway";
+  font-size: 26px;
+  letter-spacing: 8px;
+  font-weight: 100;
+  line-height: 40px;
+}
+.name div {
+  width: 94%;
+}
+.side-bar {
+  display: false;
+  position: absolute;
+  margin: false;
+  top: 60px;
+  left: 5%;
+  right: false;
+  bottom: 0;
+  width: 350px;
+  background-color: #f7e0c1;
+  padding: 60px 30px 50px;
+}
+.mugshot {
+  display: false;
+  position: absolute;
+  margin: false;
+  top: 50px;
+  left: 70px;
+  right: false;
+  bottom: false;
+  height: 210px;
+  width: 210px;
+}
+.mugshot .logo {
+  margin: -40px;
+}
+.logo {
+}
+.logo .logo-svg {
+  height: 100%;
+  width: 100%;
+  stroke: #000;
+  cursor: pointer;
+}
+.logo .logo-text {
+  font-size: 32px;
+  margin-bottom: 20px;
+  letter-spacing: 0px;
+  font-weight: 400;
+}
+.social {
+  padding-left: 40px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.social:before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  height: 20px;
+  width: 20px;
+  background-size: cover !important;
+}
+.social.twitter:before {
+  background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png")
+    center no-repeat;
+}
+.social.pinterest:before {
+  background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png")
+    center no-repeat;
+}
+.social.linked-in:before {
+  background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png")
+    center no-repeat;
+}
+.side-header {
+  font-family: "Open Sans";
+  font-size: 18px;
+  letter-spacing: 4px;
+  font-weight: 600;
+  line-height: 28px;
+  margin: 60px auto 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #888;
+}
+.list-thing {
+  padding-left: 25px;
+  margin-bottom: 10px;
+}
+.content-container {
+  margin-right: 0;
+  width: calc(95% - 350px);
+  padding: 25px 40px 50px;
+}
+.content-container > * {
+  margin: 0 auto 25px;
+}
+.content-container > h3 {
+  margin: 0 auto 5px;
+}
+.content-container > p.long-margin {
+  margin: 0 auto 50px;
+}
+.title {
+  width: 100%;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.separator {
+  width: 290px;
+  height: 2px;
+  background-color: #999;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.greyed {
+  background-color: #ddd;
+  width: 100%;
+  max-width: 580px;
+  text-align: center;
+  font-family: "Open Sans";
+  font-size: 18px;
+  letter-spacing: 6px;
+  font-weight: 600;
+  line-height: 28px;
+}
+@media screen and (max-width: 1150px) {
+  .name {
+    color: #fff;
+    font-family: "Raleway";
+    font-size: 30px;
+    letter-spacing: 6px;
+    font-weight: 100;
+    line-height: 48px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.text-tagline {
+  font-size: 15px;
 }
-
-.App-link {
-  color: #61dafb;
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 0.1rem !important;
+  color: #005796 !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text-theme {
+  color: #005796 !important;
 }
